# c-w-im

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  argparse.cpp  coarsening.cpp  coarsening.h  coarsening_details_types.h  coarsening_dump.cpp  coarsening_dump.h  contrast_algorithms.cpp  contrast_algorithms.h  create_dataset.cpp  create_dataset.h  dump.cpp  dump.h  dump_utils.h  experiments.cpp  experiments.h  experiments_internal_states.cpp  experiments_internal_states.h  graph_connectivity.h  graph_types.cpp  graph_types.h  main_create_dataset.cpp  main_create_dataset_common.h  main_create_wbim_dataset.cpp  main_create_wim_dataset.cpp  main_wbim_experiment.cpp  main_wim.cpp  main_wim_coarsening_experiment.cpp  main_wim_contrast_experiment.cpp  main_wim_experiment.cpp  params.h  radix_sort.h  to_matrix_market.cpp  to_matrix_market.h  vertex_set.h  wim.cpp  (+2 more)
contrast/: imrank.cpp  max_degree.cpp  pagerank.cpp  r_robust_scc.cpp
exec/datasets/: create_wbim_dataset.cpp  create_wim_dataset.cpp  to_matrix_market.cpp
exec/experiments/: wbim_coarsening_experiment.cpp  wim_coarsening_experiment.cpp  wim_experiment.cpp
experiments/: components.cpp  components.h  frameworks.h  internal_states.cpp  internal_states.h  io.h
experiments/impl/: contrast.cpp  wim.cpp  wim.h  wim_coarsening.cpp  wim_coarsening.h
playground/: coarsening.cpp  mongoose_matching.cpp  rfl_result.cpp  sample_graph.h  test_coarsening.cpp  test_prr_sketching.cpp  test_ranking_algorithms.cpp  test_seed_detection.cpp  test_wbim_coarsening.cpp  test_wim_coarsening.cpp
tests/: graph_connectivity.cpp  imrank.cpp  max_degree.cpp  pagerank.cpp  radix_sort.cpp  sample_graph.h  test_rfl_result.cpp  wbim_activation_probability.cpp
utils/: argparse_helper.h  boost_assert.h  boost_container_common.h  demangle.h  dynamic_bitset.h  easylog.h  flat_map.h  flat_set.h  graph.h  graph_connectivity.h  histogram.h  histogram_shape.h  reflect.h  reflect_for_each_field.h  result.h  static_vector.h  utils.h
